--- a/app/admin/style.css
+++ b/app/admin/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap"); */
 @import "tailwindcss/base";
+
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
@@ -67,6 +68,10 @@
   animation-name: applyHoverEffect;
   animation-duration: 300ms;
   animation-fill-mode: both;
+}
+
+.bg-primary {
+  background-color: hsla(var(--primary), 1);
 }
 
 .nocursor {
