--- a/app/(client)/components/nav/mobile-nav/style.css
+++ b/app/(client)/components/nav/mobile-nav/style.css
@@ -30,19 +30,23 @@ nav .menu-container div:hover {
 }
 .mobile-menu {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
   height: 100vh;
-  width: 100%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 .mobile-menu button {
   align-self: flex-end;
   margin: 35px 45px 0 0;
   outline: none;
   border: none;
+
   background-color: transparent;
   text-transform: uppercase;
   font-family: inherit;
